# qr_test

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/backend/: Dockerfile  pyproject.toml  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial.py  0002_qr_lifecycle.py
app/backend/src/: config.py  deps.py  main.py
app/backend/src/auth/: router.py  security.py
app/backend/src/crud/: base.py  customer.py  product.py  qrcode.py  scanevent.py
app/backend/src/customers/: router.py
app/backend/src/events/: router.py
app/backend/src/lifecycle/: events.py  policies.py
app/backend/src/models/: audit.py  customer.py  database.py  product.py  qr_lifecycle_event.py  qrcode.py  scanevent.py  user.py
app/backend/src/products/: router.py
app/backend/src/qr/: render.py  router.py  service.py
app/backend/src/schemas/: auth.py  customer.py  event.py  product.py  qrcode.py
app/backend/src/services/: analytics.py
app/backend/src/storage/: local.py
app/backend/src/utils/: logging.py  rate_limit.py  seed.py
app/backend/tests/: test_config.py  test_health.py  test_qr_render.py
app/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
deploy/: .env.example  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: README.md  openapi.json  postman_collection.json
examples/: README.md
frontend/: index.html  package.json  tailwind.config.js  vitest.config.ts
(+65 files in other folders)
